<resources>
    <string name="app_name">Bill Please</string>
    <string name="amount">Bill Amount ($)</string>
    <string name="number_of_pax">Number of diners</string>
    <string name="no_svs">NO SVC CHARGE</string>
    <string name="svs">SVC CHARGE</string>
    <string name="no_gst">NO GST</string>
    <string name="gst">GST</string>
    <string name="discount">Discount (%)</string>
    <string name="cash">Cash</string>
    <string name="paynow">PayNow</string>
    <string name="split">CALCULATE/SPLIT</string>
    <string name="reset">RESET</string>
    <string name="enter_discount_percentage">Enter discount percentage (if any)</string>
    <string name="enter_total_bill_amount">Enter total bill amount</string>
    <string name="number_diners">Enter Number of Diners (including yourself)</string>
</resources>